build_tools/kube_config/game-portal-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml -o ./kube_config 
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: game-portal-db
  name: game-portal-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: game-portal-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-resolved.yaml -o ./kube_config 
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: game-portal-db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: game_portal
            - name: MYSQL_PASSWORD
              value: password
            - name: MYSQL_ROOT_PASSWORD
              value: password
            - name: MYSQL_USER
          image: mysql:5.7
          name: game-portal-db
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
          args:
            - "--ignore-db-dir=lost+found"
          resources: {}
      restartPolicy: Always
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc  
status: {}
