build_tools/kube_config/game-portal-static-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml -o ./kube_config/generated
    kompose.image-pull-policy: Never
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: game-portal-static
  name: game-portal-static
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: game-portal-static
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-resolved.yaml -o ./kube_config/generated
        kompose.image-pull-policy: Never
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: game-portal-static
    spec:
      containers:
        - image: registry.digitalocean.com/dev-varcade-games/game-portal-static:v1
          imagePullPolicy: Always
          name: game-portal-static
          ports:
            - containerPort: 8001
          volumeMounts:
            - name: game-portal-persistent-storage
              mountPath: /www/game_portal/data
          resources: {}
      restartPolicy: Always
      volumes:
        - name: game-portal-persistent-storage
          persistentVolumeClaim:
            claimName: game-portal-pvc
