build_tools/kube_config/stats-tracker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml -o ./kube_config/generated
    kompose.image-pull-policy: Never
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: stats-tracker
  name: stats-tracker
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
    - name: "5001"
      port: 5001
      targetPort: 5001
  selector:
    io.kompose.service: stats-tracker
status:
  loadBalancer: {}
